微服务详情

--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "@angular/platform-browser-dynamic": "~11.2.10",
     "@angular/router": "~11.2.10",
     "@devui-design/icons": "^1.2.0",
+    "js-yaml": "^4.1.0",
     "ng-devui": "^11.1.0",
     "ngx-monaco-editor": "^9.0.0",
     "rxjs": "~6.6.0",
+    "swagger-ui": "^3.47.1",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
   },
@@ -31,6 +33,7 @@
     "@angular/cli": "~11.2.9",
     "@angular/compiler-cli": "~11.2.10",
     "@types/jasmine": "~3.6.0",
+    "@types/js-yaml": "^4.0.1",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
