--- a/angular.json
+++ b/angular.json
@@ -41,7 +41,8 @@
             "styles": [
               "src/styles.less",
               "node_modules/ng-devui/devui.min.css",
-              "node_modules/@devui-design/icons/icomoon/devui-icon.css"
+              "node_modules/@devui-design/icons/icomoon/devui-icon.css",
+              "node_modules/swagger-ui/dist/swagger-ui.css"
             ],
             "scripts": []
           },
