标签观管理

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~11.2.10",
     "@devui-design/icons": "^1.2.0",
     "js-yaml": "^4.1.0",
+    "lodash": "^4.17.21",
     "ng-devui": "^11.1.0",
     "ngx-monaco-editor": "^9.0.0",
     "rxjs": "~6.6.0",
@@ -34,6 +35,7 @@
     "@angular/compiler-cli": "~11.2.10",
     "@types/jasmine": "~3.6.0",
     "@types/js-yaml": "^4.0.1",
+    "@types/lodash": "^4.14.168",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
